[package]
name = "game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common.path = "../common"
engine.path = "../engine"
env_logger = "0.11.5"
glam = "0.29.2"
hecs = { version = "0.10.5", default-features = false }
log = "0.4.22"
rand = "0.8.5"
renderer.path = "../renderer"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
