[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.19.0", features = ["derive"] }
common.path = "../common"
cosmic-text = "0.12.1"
etagere = "0.2.13"
glam = { version = "0.29.2", features = ["bytemuck"] }
image = "0.25.5"
log = "0.4.22"
lru = "0.12.5"
pollster = "0.4.0"
raw-window-handle = "0.6.2"
rustc-hash = "2.0.0"
web-time = "1.1.0"
wgpu = "23"
